# B3Note

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  canister_ids.json  dfx-start.sh  dfx.json  next.config.js  package.json  tsconfig.json  webpack.config.js
.dfx/local/: canister_ids.json  network-id
.dfx/local/lsp/: be2us-64aaa-aaaaa-qaabq-cai.did
backend/: Cargo.toml  authenticator.did  backend.did
backend/src/: anonymous.rs  constants.rs  exprimental.rs  identified.rs  keys.rs  lib.rs  one_time.rs  partition.rs  stable.rs  store.rs  task.rs  text.rs  types.rs  utils.rs
backend/src/anonymous/: store.rs
backend/src/identified/: store.rs
backend/src/one_time/: stable.rs  store.rs
backend/src/task/: store.rs
backend/src/text/: stable.rs  store.rs
frontend/: bun.lockb  next.config.js  package.json  tsconfig.json
frontend/public/: site.webmanifest  sw.js
ic-vetkd-utils/: Cargo.toml
ic-vetkd-utils/src/: lib.rs
old_backend/: Cargo.toml  old_backend.did
old_backend/src/: lib.rs  vetkd.rs
public/: index.html  sw.js
src/: App.tsx  index.tsx  vetkd.ts
src/backend/: Cargo.toml  authenticator.did
src/backend/src/: lib.rs  vetkd.rs
src/components/: Container.tsx  Header.tsx  Icons.tsx  Note.tsx  Notes.tsx  SimpleCard.tsx
src/frontend/: App.tsx  Identity.tsx  WithII.tsx  WithoutII.tsx  index.tsx  theme.ts  useAuthClient.ts  useCanister.ts  utils.ts
src/helper/: utils.ts
src/hook/: useAuthClient.ts  useCanister.ts
src/pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx  withii.tsx  withoutii.tsx
src/service/: backend.ts  index.ts
src/system_api/: Cargo.toml  vetkd_system_api.did
src/theme/: global.css  index.tsx  types.ts
system_api/: Cargo.toml
system_api/src/: lib.rs
(+93 files in other folders)
