[package]
name = "backend"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.10"
ic-cdk = "0.11.2"
ciborium = "0.2"
ic0 = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
b3_utils = { version = "0.6.0", features = [
    "logging",
    "stable_memory",
    "exprimental_vetkd",
] }
